--- a/Lab1/Lab1.Web/Lab1.Web/Lab1.Web.csproj
+++ b/Lab1/Lab1.Web/Lab1.Web/Lab1.Web.csproj
@@ -153,10 +153,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\EnumValuesParser.cs" />
-    <Compile Include="Helpers\FileWriter.cs" />
+    <Compile Include="Models\GeneratingResultModel.cs" />
     <Compile Include="Models\InputViewModel.cs" />
     <Compile Include="Models\VariantModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GeneratorService.cs" />
     <Compile Include="Services\IRandomNumberGenerator.cs">
       <DependentUpon>RandomNumberGenerator.cs</DependentUpon>
     </Compile>
@@ -173,6 +174,12 @@
     <Content Include="Scripts\Custom\main.js.map">
       <DependentUpon>main.ts</DependentUpon>
     </Content>
+    <Content Include="Scripts\Custom\watingdialog.js">
+      <DependentUpon>waitingdialog.ts</DependentUpon>
+    </Content>
+    <Content Include="Scripts\Custom\watingdialog.js.map">
+      <DependentUpon>waitingdialog.ts</DependentUpon>
+    </Content>
     <Content Include="Vendors\Bootstrap\Styles\bootstrap.css" />
     <Content Include="Vendors\Bootstrap\Styles\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
@@ -185,6 +192,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="tsconfig.json" />
     <None Include="Vendors\JQuery\Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Vendors\JQuery\Scripts\jquery-1.10.2.js" />
     <Content Include="Vendors\JQuery\Scripts\jquery-1.10.2.min.js" />
@@ -227,6 +235,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\Custom\main.ts" />
+    <TypeScriptCompile Include="Scripts\Custom\waitingdialog.ts" />
     <TypeScriptCompile Include="Scripts\typings\JQuery\jquery.validate.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\JQuery\jquery.d.ts" />
   </ItemGroup>
